dnl Autoconf configure script for Ada Server Faces
dnl Copyright (C) 2009, 2010, 2011, 2012, 2013, 2015 Stephane Carrez
dnl Written by Stephane Carrez (Stephane.Carrez@gmail.com)
dnl
dnl  Licensed under the Apache License, Version 2.0 (the "License");
dnl  you may not use this file except in compliance with the License.
dnl  You may obtain a copy of the License at
dnl
dnl     http://www.apache.org/licenses/LICENSE-2.0
dnl
dnl  Unless required by applicable law or agreed to in writing, software
dnl  distributed under the License is distributed on an "AS IS" BASIS,
dnl  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
dnl  See the License for the specific language governing permissions and
dnl  limitations under the License.
dnl 
dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/awa.ads)

AC_CANONICAL_SYSTEM
dnl AM_MAINTAINER_MODE

# Current release settings
AWA_MAJOR_VERSION=1
AWA_MINOR_VERSION=1
AWA_MICRO_VERSION=0
AWA_VERSION=$AWA_MAJOR_VERSION.$AWA_MINOR_VERSION.$AWA_MICRO_VERSION

# checking for local tools
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LN_S
AC_CHECK_PROG(UNZIP_CHECK,unzip,yes)
if test x"$UNZIP_CHECK" != x"yes" ; then
    AC_MSG_ERROR([Please install unzip before installing Dynamo.])
fi

# Set the version number of GtkAda
AC_SUBST(AWA_VERSION)
AC_SUBST(AWA_MAJOR_VERSION)
AC_SUBST(AWA_MINOR_VERSION)
AC_SUBST(AWA_MICRO_VERSION)

EXEC_PREFIX="$prefix"
AC_SUBST(EXEC_PREFIX)

AWA_LIBDIR="lib"
AC_SUBST(AWA_LIBDIR)

AC_MSG_CHECKING([number of processors])
NR_CPUS=`getconf _NPROCESSORS_CONF 2>/dev/null || getconf NPROCESSORS_CONF 2>/dev/null || echo 1`
AC_MSG_RESULT($NR_CPUS)
AC_SUBST(NR_CPUS)

ADO_USE_GPRBUILD=no
AC_ARG_WITH(gprbuild,
AS_HELP_STRING([--with-gprbuild], [Use gprbuild instead of gnatmake for the compilation]),
[
  ADO_USE_GPRBUILD=${withval}
])
case "$ADO_USE_GPRBUILD" in
  yes)
    AC_CHECK_PROGS(GNATMAKE, gprbuild, "")
    AC_CHECK_PROGS(GNATCLEAN, gprclean, "")
	;;

  *)
	AC_CHECK_PROGS(GNATMAKE, gnatmake, "")
	AC_CHECK_PROGS(GNATCLEAN, gnatclean, "")
   ;;
esac

##########################################
# Check to enable/disable shared library
##########################################
AM_SHARED_LIBRARY_SUPPORT

##########################################
# Ada Util library
##########################################
AM_GNAT_FIND_PROJECT([ada-util],[Ada Utility Library],[util],
  [git@github.com:stcarrez/ada-util.git],
  [Building Ada EL requires the Ada Utility Library.],
  [
    UTIL_DIR=${gnat_project_dir_util}
  ])
AC_SUBST(UTIL_DIR)

##########################################
# Ada Expression Language library
##########################################
AM_GNAT_FIND_PROJECT([ada-el],[Ada Expression Language Library],[el],
  [git@github.com:stcarrez/ada-el.git],
  [Building Ada Server Faces requires the Ada EL Library.],
  [
    EL_DIR=${gnat_project_dir_el}
  ])
AC_SUBST(EL_DIR)

##########################################
# Ada Wiki library
##########################################
AM_GNAT_FIND_PROJECT([ada-wiki],[Ada Wiki Library],[wiki],
  [git@github.com:stcarrez/ada-wiki.git],
  [Building Ada Web Application requires the Ada Wiki Library.],
  [
    WIKI_DIR=${gnat_project_dir_wiki}
  ])
AC_SUBST(WIKI_DIR)

##########################################
# Ada Security library
##########################################
AM_GNAT_FIND_PROJECT([ada-security],[Ada Security Library],[security],
  [git@github.com:stcarrez/ada-security.git],
  [Building Ada Server Faces requires the Ada Security Library.],
  [
    SECURITY_DIR=${gnat_project_dir_security}
  ])
AC_SUBST(SECURITY_DIR)

##########################################
# Ada Server Faces library
##########################################
AM_GNAT_FIND_PROJECT([ada-asf],[Ada Server Faces Library],[asf],
  [git@github.com:stcarrez/ada-asf.git],
  [Building Ada Web Application requires the Ada Server Faces Library.],
  [
    ASF_DIR=${gnat_project_dir_asf}
  ])
AC_SUBST(ASF_DIR)


##########################################
# Ada Database Objects library
##########################################
AM_GNAT_FIND_PROJECT([ada-ado],[Ada Database Objects],[ado],
  [git@github.com:stcarrez/ada-ado.git],
  [Building Dynamo requires the Ada Database Objects Library.],
  [
    ADO_DIR=${gnat_project_dir_ado}
  ])
AC_SUBST(ADO_DIR)

AC_CHECK_PROGS(MYSQL, mysql)
if test "X$MYSQL" != "X" ; then
  ADO_DB_MYSQL=True
else
  ADO_DB_MYSQL=False
fi
AC_SUBST(ADO_DB_MYSQL)

AC_CHECK_PROGS(SQLITE3, sqlite3)
if test "X$SQLITE3" != "X" ; then
  ADO_DB_SQLITE=True
else
  ADO_DB_SQLITE=False
fi
AC_SUBST(ADO_DB_SQLITE)

AWA_AWS_STATUS=yes
AC_SUBST(AWA_AWS_STATUS)

AM_UTIL_CHECK_INSTALL

AC_OUTPUT(
Makefile rules.mk awa.gpr awa_tests.gpr awa_unit.gpr distrib/awa.gpr distrib/awa_unit.gpr
)
